crates/reinhardt-template/crates/templates-macros/tests/ui/fail/absolute_path.stderr
error: Template path must be relative (not absolute)
       Paths should not start with '/' for portability.
       Example: template!("emails/welcome.html") instead of template!("/templates/welcome.html")
 --> tests/ui/fail/absolute_path.rs:4:23
  |
4 |     let _ = template!("/etc/passwd");
  |                       ^^^^^^^^^^^^^
